/* $Id: ChangeLog,v 1.2767 2005-04-24 08:08:06 sao2l02 Exp $ */
2005-04-24: Dietrich Teickner <dietrich_teickner@arcor   >
    - kernel32: o src\kernel32\winimagelx.cpp
                  stub - init of the IMAGE_EXPORT_DIRECTORY for lx-dll's(pe-header of the orign odin-dll's).
2005-04-19: Dietrich Teickner <dietrich_teickner@arcor   >
    - comctl32: o src\comctl32\listview.c
                  protect us from recursive callback with reset the callbackmask before callback and restore after.
    - user32:   o src\user32\wsprintf.cpp
                  switch of the debuging of wsprintf
                o src\user32\message.cpp
                  stop the message-loop for Agent 2.0 (currently no better solution) 
2005-04-11: Steven Levine <steve53@earthlink >
    - win32k    o src\win32k\win32k.mak
                o src\win32k\win32k.tools.mk
                  makefile patches that will prevent build errors
                  in a clean tree
2005-04-08: Andy Willis <abwillis@comcast >
    - ntdll: o src\ntdll\ntdll.def added RtlGetNtVersionNumbers
2005-03-28: Dietrich Teickner <dietrich_teickner@arcor   >
    - comctl32: o src\comctl32\listview.c
                  move the workaround for flashfxp 3.02 from message.cpp to listview.c,
                  work's also with wine. flashfxp 3.02 connect also in wine.
                  Found the double-click problem from FlashFXP in former odin-releases also in wine yet.
    - user32:   o src\user32\message.cpp
2005-03-27: Dietrich Teickner <dietrich_teickner@arcor   >
    - comctl32: o src\comctl32\listview.c
                  some resyncs with wine for flashfxp 3.02.
    - user32:   o src\user32\message.cpp
                  stop the recursive callback at SendMessageTimeoutA.
                  workaround for flashfxp 3.02, we can remove them,
                  if we have a better solution in src\comctl32\listview.c from wine.
2005-03-12: Dietrich Teickner <dietrich_teickner@arcor   >
    - shell32:  o src\shell32\shell32_main.c